# I.A.I.R.C

./: Cargo.toml  README.md
src/: main.rs
static/: home_page.html  styles.css
templates/: home_page.html
