[package]
name = "chat_room_ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = {version = "4.4.0", features = ["macros"] }

actix-web-actors = "4.2.0"
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }

uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = {version = "0.6.2", features = ["runtime-actix-rustls", "mysql"]}